fleet-tenancy-with-defaults/k8s-policy-dir/gkee-team-selector-example/templates/teamscope-network-policy-deny-ingress.yaml
### from https://kubernetes.io/docs/concepts/services-networking/network-policies/#default-deny-all-ingress-traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  annotations:
    configmanagement.gke.io/namespace-selector: fleet-scope-selector
spec:
  podSelector: {}
  policyTypes:
  - Ingress
